src/app/navigation-bar/navigation-bar.component.scss
.navigation-bar-ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
    list-style-type:none;
    display:flex;
    justify-content: center;    
  }
  
  .navigation-bar-li {   
  display: list-item;
  background: rgb(100, 100,109); 
  color:white;  
  }
  
  .navigation-bar-li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }
  
  /* Change the link color to #111 (black) on hover */
  .navigation-bar-li a:hover {
    background-color: #111;
  }

  .navigation-bar-li a:active {
    background-color: yellow;
    color:#111;
  }
 
  .navigation-content-container{
    padding: 2%;
  }

  .android-app-icon{
   width: 55%;
   border-radius: 15px;
   padding-top: 3%;
   padding-bottom: 3%;
   border-radius: 30%;
  }


  .android-apps-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    list-style-type:none;
    display:flex;
    justify-content: center;  
    text-align: center;  
  }

  .android-app-item {   
    display: list-item;
    color:white;  
    }

    .education-apps-title{
      text-align: center;
    }

